metadatafullcopy/unpackaged/objects/Job_Lead__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Job Leads</relationshipLabel>
        <relationshipName>Job_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <description>Field to indicate claim number for jobs that will be covered by insurance.</description>
        <label>Claim #</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to link the primary Contact of the Job to the Opportunity</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Jobs (Contact)</relationshipLabel>
        <relationshipName>JobContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Loss__c</fullName>
        <description>Field to indicate date of loss</description>
        <label>Date of Loss</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Field to note what major division/service type the job is related to.</description>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asbestos</fullName>
                </value>
                <value>
                    <fullName>Biohazard</fullName>
                </value>
                <value>
                    <fullName>Catastrophes</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Contents</fullName>
                </value>
                <value>
                    <fullName>Demolition</fullName>
                </value>
                <value>
                    <fullName>Emergency Svces</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Microbial</fullName>
                </value>
                <value>
                    <fullName>Technical Svces</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Class__c</fullName>
        <description>Indicator of job classification/industry</description>
        <label>Job Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Educational - Private</fullName>
                </value>
                <value>
                    <fullName>Educational - Public</fullName>
                </value>
                <value>
                    <fullName>GSA</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Multi-Family</fullName>
                </value>
                <value>
                    <fullName>Municipality/ Gov&apos;t</fullName>
                </value>
                <value>
                    <fullName>Religious</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising and Publications</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Building Consultant</fullName>
                </value>
                <value>
                    <fullName>Consulting Firm</fullName>
                </value>
                <value>
                    <fullName>Employee - Friends or Family Referral</fullName>
                </value>
                <value>
                    <fullName>Environmental Hygienist</fullName>
                </value>
                <value>
                    <fullName>Facilities Management/Building Engineer</fullName>
                </value>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
                <value>
                    <fullName>Government or Municipality</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Independent Adjusting Company</fullName>
                </value>
                <value>
                    <fullName>Insurance Agent</fullName>
                </value>
                <value>
                    <fullName>Insurance Broker</fullName>
                </value>
                <value>
                    <fullName>Insurance Company</fullName>
                </value>
                <value>
                    <fullName>Live Chat</fullName>
                </value>
                <value>
                    <fullName>National Account (ERA, Contract, Etc)</fullName>
                </value>
                <value>
                    <fullName>Program - Alacrity Consumer Services</fullName>
                </value>
                <value>
                    <fullName>Program - Alacrity REO</fullName>
                </value>
                <value>
                    <fullName>Program - Alacrity Services</fullName>
                </value>
                <value>
                    <fullName>Program - American Emergency Services</fullName>
                </value>
                <value>
                    <fullName>Program - BrightServ</fullName>
                </value>
                <value>
                    <fullName>Program - CC Consumer Services</fullName>
                </value>
                <value>
                    <fullName>Program - Code Blue Network</fullName>
                </value>
                <value>
                    <fullName>Program - Contractor Connection</fullName>
                </value>
                <value>
                    <fullName>Program - Direct Assignment</fullName>
                </value>
                <value>
                    <fullName>Program - Direct Claims Management (DCMG)</fullName>
                </value>
                <value>
                    <fullName>Program - IMACC</fullName>
                </value>
                <value>
                    <fullName>Program - Innovation Property</fullName>
                </value>
                <value>
                    <fullName>Program - Lionsbridge</fullName>
                </value>
                <value>
                    <fullName>Program - NEXXUS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO #</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy__c</fullName>
        <label>Policy #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Structure_Built__c</fullName>
        <description>Year the structure was built related to the job</description>
        <label>Year Structure Built</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Job Lead</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Job Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>